--- a/package.json
+++ b/package.json
@@ -1,31 +1,34 @@
 {
-  "name": "portfolio",
+  "name": "fifitness",
   "version": "1.0.0",
-  "description": "example grunt project",
-  "main": "index.js",
+  "description": "Fitness",
+  "main": "gruntfile.js",
+  "dependencies": {
+    "grunt": "^1.0.3",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-browser-sync": "^2.2.0",
+    "grunt-contrib-imagemin": "^1.0.1",
+    "grunt-cli": "^1.3.1",
+    "grunt-sass": "^2.1.0"
+  },
+  "devDependencies": {
+    "grunt": "^1.0.3",
+    "grunt-sass": "^2.1.0"
+  },
   "scripts": {
-    "test": "kodilla-test"
+    "test": "Fitness-test"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sosiak/Kodilla.git"
+    "url": "git+https://github.com/sosiak/fitness.git"
   },
   "keywords": [
-    "grunt"
+    "Fitness"
   ],
   "author": "Slawomir Osiak",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/sosiak/Kodilla/issues"
+    "url": "https://github.com/sosiak/fitness/issues"
   },
-  "homepage": "https://github.com/sosiak/Kodilla#readme",
-  "devDependencies": {
-    "grunt": "^1.0.3",
-    "grunt-browser-sync": "^2.2.0",
-    "grunt-contrib-imagemin": "^1.0.1",
-    "grunt-contrib-sass": "^1.0.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-sass": "^2.1.0"
-  },
-  "dependencies": {}
+  "homepage": "https://github.com/sosiak/fitness#readme"
 }
